Added default form styling from bitters, removed collapsable search from, reformatted search form, restyled navbar

--- a/app/assets/stylesheets/modules/modules.scss
+++ b/app/assets/stylesheets/modules/modules.scss
@@ -7,3 +7,6 @@
 @import "sliding_menu";
 @import "comment";
 @import "empty_list_notices";
+@import "navbar";
+@import "bitters_variables";
+@import "forms";
