--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'search' %>
 <!-- if statement needs to be fixed, this is a lazy hack to get it to work
      if only a single card is returned -->
 <% if @cards.respond_to? :count %>
