--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>MTG TRADE BINDER DELUXXE</title>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application'%>
@@ -14,61 +13,50 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
   </head>
 
-<body>
-  <div class = " thehead collapsable "> <!-- Found in /stylesheets/modules/thehead.scss -->
-    <div class ="maintitle">
-      <div class="text">
-        <h1> The Magic,<br/> The Gathering,<br/> The Trade,<br/> The Binder </h1>
+  <body>
+    <header class="navigation" role="banner">
+      <div class="navigation-wrapper">
+        <a href="/cards" class="logo">
+          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
+        </a>
+        <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+        <nav role="navigation">
+          <ul id="js-navigation-menu" class="navigation-menu show">
+          <% if current_user %>
+            <li class="nav-link"><%= link_to "My Binder", user_path(current_user.id)%></li>
+            <li class="nav-link"><%= link_to "My Trades", user_trades_path(current_user.id) %></li>
+            <li class="nav-link"><%= link_to "Find Trades", users_path%></li>
+            <li class="nav-link"><%= link_to "Card Search", cards_path%></li>
+          <% else %>
+          <% end %>
+          </ul>
+        </nav>
+        <div class="navigation-tools">
+          <% if current_user %>
+            <ul>
+              <li class="nav-link"><p>Signed in as <%= current_user.email %></p></li>
+              <%= link_to "Log out", session_path("current"), :method => :delete, :class =>"sign-up" %> 
+            </ul>
+          <% else %>
+            <a href="/sessions/new" class="sign-up">Log In</a>
+            <a href="/users/new" class="sign-up">Sign Up</a>
+          <% end %>
+        </div>
       </div>
+    </header>
+   
+    <div class = "pokedex collapsable", id = "search"> <!-- found in stylseheets/modules.pokedex.scss -->
+
     </div>
-    <div class= "interface">
-      <div class = "signin">
-        <% if current_user %>
-          Signed in as <%= current_user.email %> </br>
-          <%= link_to "Log out", session_path("current"), :method => :delete %> 
-     <% end %>
-      </div>
 
-      <div class = "menu ">
-        <% if current_user %>
-          <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
-          <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %></div>
-          <div class = "menuitem"><%= link_to "Find Trades", users_path%></div>
-          <div class = "menuitem"><%= link_to "User Settings", edit_user_path(current_user.id) %></br></div>
-        <% else %>
-          <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
-          <div class = "menuitem"><%= link_to "Sign up", new_user_path %></div>
+    <!-- nav -->
 
-        <% end %>
-      </div>
-      
-    </div>
-   </div>
- 
-  <div class = "pokedex collapsable", id = "search"> <!-- found in stylseheets/modules.pokedex.scss -->
-    <div class = "search-button">
-      <h1>Search</h1>
-      </div>
-    <div class ="search fullerton">
-      <%= render '/cards/search' %>
-    </div>
-   <!--  <div class="cardbox fullerton ">
-      This Element Needs Purpose
-    </div> -->
-  </div>
-
-  <!-- nav -->
-
-    
-
-      <div class = "mainscreen collapsable">
-    
+    <div class = "mainscreen collapsable">
       <%= yield %>
-      </div>
+    </div>
 
-</body>
+  </body>
 
 </html>
