--- a/app/assets/stylesheets/themepack.scss
+++ b/app/assets/stylesheets/themepack.scss
@@ -23,60 +23,60 @@ $searchtextalign: right;
 
 // borders
 	@mixin titleborder($t, $r, $b, $l){
-		margin-top:  (-$t);
+		// margin-top:  (-$t);
 		
-		margin-right: (-$r);
-		margin-bottom:  (-$b);
-		margin-left: (-$l) ;
+		// margin-right: (-$r);
+		// margin-bottom:  (-$b);
+		// margin-left: (-$l) ;
 
 
-		border-top: ($t)+ px solid $bordercolor;
-		border-right: ($r) + px solid $bordercolor;
-		border-bottom: ($b) + px solid $bordercolor;
-		border-left: ($l) + px solid $bordercolor;
+		// border-top: ($t)+ px solid $bordercolor;
+		// border-right: ($r) + px solid $bordercolor;
+		// border-bottom: ($b) + px solid $bordercolor;
+		// border-left: ($l) + px solid $bordercolor;
 
 	}
 
 	@mixin previewborder{
-		border: 1px blue dashed;
-		margin: -1px -1px -1px -1px;
+		// border: 1px blue dashed;
+		// margin: -1px -1px -1px -1px;
 	}
 
 // TEXT DEFAULTS 
 	h1, h2, a, td, label, h3{
-		margin: 0;
-		text-decoration: none;
+		// margin: 0;
+		// text-decoration: none;
 	}
 
 	a:link {
-		background-color: rgba( $link-background, .7 );
-	    color: black;
+		// background-color: rgba( $link-background, .7 );
+	 //    color: black;
 	}
 
 	a:visited {
-	    color: black;
+	    // color: black;
 	}
 
 	a:hover {
-	    color: black;
+	    // color: black;
 	}
 	a:active {
-	    color: black;
+	    // color: black;
 	}
 
 	h1{
-		font-size: 2em;
+		// font-size: 2em;
 	}
 
 	a{
-		font-size: 2em;
+		// font-size: 2em;
 	} 
 
 
 	.mainscreen{ 
 
 	  a{
-	    font-size: 1.5em;
+	    // font-size: 1.5em;
 	  }
 	 }
 
