Added search form styling for users index view

--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -11,6 +11,10 @@
   display: inline;
 }
 
+#distance {
+  padding: 0px 10px;
+}
+
 fieldset {
   background: lighten($base-border-color, 10);
   border: $base-border;
