added modal and initial styling. edited modal-id id so that corresponding card images were displaying properly

--- a/app/assets/stylesheets/modules/modules.scss
+++ b/app/assets/stylesheets/modules/modules.scss
@@ -9,9 +9,9 @@
 @import "empty_list_notices";
 @import "navbar";
 @import "bitters_variables";
-<<<<<<< HEAD
 @import "forms";
 @import "footer";
 @import "typeahead";
 @import "forms";
+@import "modals";
 
