--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -30,11 +30,37 @@
         <div class="modal-window">
           <div class="modal-inner">
             <label class="modal-close" for="<%= card.id %>"></label>
-            <h1><%= card.name %></h1>
-            <img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-            <div> 
-              <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put %>
-              <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put %>
+            <div id="modal-display">
+
+              <h1><%= card.name %></h1>
+              <img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+              <div>
+                <table id ="card-info">
+                  <tr>
+                    <td>
+                      <%= card.card_set.name %>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <td>
+                      <%= card.card_types.first.name %>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <%= card.mana_cost %>
+                      <%= card.flavor %>
+                    </td>
+                  </tr>
+
+                </table>
+              </div>
+              <!-- <div> 
+                <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put %>
+                <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put %>
+              </div> -->
+
             </div>
           </div>
         </div>
