--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @user, :url => "#{current_user.id}/update_lists", method: :post do |f| %>
 	<%= f.fields_for :wanted_list do |list_fields| %>
-		<table class="table-minimal fixed">
+		<table class="table-minimal fixed sortable">
 			<tbody>
 				<tr>
 					<th>
