--- a/app/assets/stylesheets/themepack.scss
+++ b/app/assets/stylesheets/themepack.scss
@@ -11,15 +11,31 @@ $searchtextalign: right;
 
 
 
- #inventory{
+ .inventory{
  	background-color: $inventorycolor;
  }
- #tradeable{
+
+ .tradeable{
  	background-color: $tradeablecolor;
  }
- #wanted{
+ .wanted{
  	background-color: $wantedcolor;
  }
+
+.inventory-column {
+ width: 4em;
+ padding: 10px;
+}
+
+.tradeable-column {
+ width: 4em;
+ padding: 10px;
+}
+
+.wanted-column {
+ width: 4em;
+ padding: 10px;
+}
 
 // borders
 	@mixin titleborder($t, $r, $b, $l){
