added bottom padding to mainscreen div so that footer is a better distance from the main body. footer is also no longer permanently on the screen...removed bottom:0 position: absolute

--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -34,8 +34,8 @@
 
               <h1><%= card.name %></h1>
               <img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-              <div>
-                <table id ="card-info">
+              <div id ="card-info">
+                <table >
                   <tr>
                     <td>
                       <%= card.card_set.name %>
