added github img and link to our repo. should change image...kinda ugly. also changed footer padding slightly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,8 +78,8 @@
         </ul>
 
         <ul class="footer-social">
-          <li><a href="javascript:void(0)">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
+          <li><a href="https://github.com/pschwyter/mtg_json_api">
+            <img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt="Facebook">
             </a></li>
           <li><a href="javascript:void(0)">
             <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
