the card search results table no longer has a button for every card

--- a/app/assets/stylesheets/modules/modals.scss
+++ b/app/assets/stylesheets/modules/modals.scss
@@ -45,7 +45,7 @@
   }
 
   .modal-trigger {
-    @include button(flat, $base-accent-color);
+    // @include button(flat, $base-accent-color);
     padding: 0.8em 1em;
   }
 
