added a few breaks and padding to the search and index view

--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -94,7 +94,7 @@
 				<td>
 					<div class="box ">
 						<div class ="input", id = "boxes">
-							<%= submit_tag("Search") %>
+							<br><%= submit_tag("Search") %>
 						</div>
 				 	</div>
 				</td>
