Ajaxified adding cards to user list from card index view, added notices to index view as response

--- a/app/assets/stylesheets/modules/empty_list_notices.scss
+++ b/app/assets/stylesheets/modules/empty_list_notices.scss
@@ -23,6 +23,23 @@ $success-color: #e6efc2 !default;
   }
 }
 
+#confirmation-message {
+  width: 100%;
+  height: 50px;
+}
+
+.added-inventory-notice {
+  @include empty-list($inventorycolor);
+}
+
+.added-tradeable-notice {
+  @include empty-list($tradeablecolor);
+}
+
+.added-wanted-notice {
+  @include empty-list($wantedcolor);
+}
+
 .empty-list-alert {
   @include empty-list($alert-color);
 }
