--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'search' %>
+<div id="confirmation-message"></div>
 <!-- if statement needs to be fixed, this is a lazy hack to get it to work
      if only a single card is returned -->
 <% if @cards.respond_to? :count %>
