--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -10,7 +10,7 @@
       <th>Type</th>
       <th>Cost</th>
       <th>Set</th>
-      <th>$</th>
+      <th>TCGMid</th>
       <th>I</th>
       <th>T</th>
       <th>W</th>
@@ -67,8 +67,6 @@
       </div>
 
       </td>
-
-
       <td>
         <%= card.card_types.first.name %>
       </td>
@@ -79,20 +77,20 @@
         <%= card.card_set.name %>
       </td>
       <td>
-        $4.95
+        <a href="#">$<%= card.price %></a>
       </td>
-      <td id="inventory">
-        <%= link_to add_to_inventory_path(card.id), :method => :put do %> 
+      <td class="inventory">
+        <%= link_to add_to_inventory_path(card.id), :remote => true, class: "add-inventory", data: {card_name: card.name}, :method => :put do %>
           +
         <% end %>
       </td>
-      <td id="tradeable">
-        <%= link_to add_to_tradeable_path(card.id), :method => :put do %> 
+      <td class="tradeable">
+        <%= link_to add_to_tradeable_path(card.id), :remote => true, class: "add-tradeable", data: {card_name: card.name}, :method => :put do %> 
           +
         <% end %>
       </td>
-      <td id="wanted">
-        <%= link_to add_to_wanted_path(card.id), :method => :put do %>
+      <td class="wanted">
+        <%= link_to add_to_wanted_path(card.id), :remote => true, class: "add-wanted", data: {card_name: card.name}, :method => :put do %>
          +
         <%end%> 
       </td>
