--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,3 +1,4 @@
+<h1>New Trade with <%= @user.full_name %></h1>
 <div class="section-inner search-theme mobile-collapse">
 
 		<%= form_for [@user, @trade] do |f| %>
