--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -1,3 +1,4 @@
+<h1>Edit Trade with <%= @user.full_name %></h1>
 <div class="section-inner search-theme mobile-collapse">
 
 	<% if @trade.initiator == current_user %>
