moved css for name input resizing

--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag("/cards", method: "get") do %>
 	<%= fields_for :card_fields do |ff| %>	
 		<h1>Card Search</h1>
-		<div class="fuck-this-sizing-issue">
+		<div class="name-input-width-resize">
 		<table>
 			<tr class="search-form-row">
 				<td></td>
