--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag("/cards", method: "get") do %>
 	<%= fields_for :card_fields do |ff| %>	
-		<h1>Card Search</h1>
+		<div class= "titleofpage"> <h1>Card Search</h1> </div>
 		<table>
 			<tr>
 				<td></td>
