--- a/app/assets/stylesheets/modules/thehead.scss
+++ b/app/assets/stylesheets/modules/thehead.scss
@@ -1,52 +1,77 @@
-$headheight: 8em;
+$headheight: 5em;
 $itempadding: 1%; 
 
 
 .thehead{
+	padding: .5em 0em .5em 0em;
 	height: $headheight;
+	margin-top: 2%;
+	background-color: #F7F7F7;
+	box-shadow: 1px 1px  $linkcolor;
 
-	
 	.maintitle{
-		height: $headheight;
 		@include span-columns(3);
 		.text{
-
 			height: $headheight;		
-			@include span-columns(3 of 3);
 			// @include becoolfont(2em);
-			@include titleborder(1, 1, 1, 0); 
+			h1{
+				margin-top: 0;
+				font-family: 'Cinzel', serif;
+			}
 		}
 	}
 
 	.interface{
+	
 		height: $headheight;
-		@include shift(1);
 		@include span-columns(9);
 		@include titleborder(1, 1, 1, 0); 
 
-		.signin{
-			height: 4em;
-			@include span-columns(8 of 9);	
-			@include shift(7);
-
-			// @include becoolfont(2em);
-			text-align: left;
-			padding-right: 2%;
-
-		}
+		
 		.menu{
-			height: 4em;
-			@include span-columns(8 of 9);
-			@include shift(1);
-
+			
+			height: 2em;
 			.menuitem{
-				@include span-columns(2 of 8);
+				
+				@include span-columns(2 of 9);
 				// @include titleborder(0, 1, 1, 0);
 				// @include becoolfont(2em);
 				span{
-					// background-color: purple;
+					// background-color: purple;				
+				}
+				a{
+					text-decoration: none;
+					font-size: 2em;
 				}
 			}
+			
 		}
+
+	}
+	.logger{
+		@include span-columns(12);
+		display: block;
+		margin: 0;
+		text-align: right;
+		
+		.signin{
+		
+			
+				h1{
+					font-size:1em;
+				}
+				.logoutbutton{
+					text-align: center;
+					background-color: black;
+					
+					a{
+						font-style: bold;
+						color: white
+					}
+				}
+
+
+
+			}
 	}
 }
