--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csrf_meta_tags %>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Cinzel:900,700,400' rel='stylesheet' type='text/css'>
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -16,40 +17,56 @@
   </head>
 
   <body>
-    <header class="navigation" role="banner">
-      <div class="navigation-wrapper">
-        <a href="/cards" class="logo">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
-        </a>
-        <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-        <nav role="navigation">
-          <ul id="js-navigation-menu" class="navigation-menu show">
-          <% if current_user %>
-            <li class="nav-link"><%= link_to "My Binder", user_path(current_user.id)%></li>
-            <li class="nav-link"><%= link_to "My Trades", user_trades_path(current_user.id) %></li>
-            <li class="nav-link"><%= link_to "Find Trades", users_path%></li>
-            <li class="nav-link"><%= link_to "Card Search", cards_path%></li>
-          <% else %>
-          <% end %>
-          </ul>
-        </nav>
-        <div class="navigation-tools">
-          <% if current_user %>
-            <ul>
-              <li class="nav-link"><p>Signed in as <%= current_user.email %></p></li>
-              <%= link_to "Log out", session_path("current"), :method => :delete, :class =>"sign-up" %> 
-            </ul>
-          <% else %>
-            <a href="/sessions/new" class="sign-up">Log In</a>
-            <a href="/users/new" class="sign-up">Sign Up</a>
-          <% end %>
+    <div class = " thehead collapsable "> <!-- Found in /stylesheets/modules/thehead.scss -->
+      <!-- MAINTITLE -->
+      <div class ="maintitle">
+        <div class="text">
+          <h1> MTG </br> Trade Binder </h1>
         </div>
       </div>
-    </header>
-   
-    <div class = "pokedex collapsable", id = "search"> <!-- found in stylseheets/modules.pokedex.scss -->
+      <!-- INTERFACE -->
+      <div class= "interface">
+        <div class = "signin">
+                  </div>
+       
+       <div class = "menu ">
+          <% if current_user %>
+            <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
+            <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %> </div>
+            <div class = "menuitem"><%= link_to "Find Trades", users_path%> </div>
+            <div class = "menuitem"><%= link_to "User Settings", root_path %> </br> </div>
+           
+             
+          </div>
+          <div class = "logger">
+            <% if current_user %>
+                 <div class = "signin">
+                  <h1> Signed in as <%= current_user.full_name %>
+                   <%= link_to "Log out", session_path("current"), :method => :delete %> 
+                 </div>
+                </h1>
+              <% end %>
+                </div>
+          <% else %>
+            <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
+            <div class = "menuitem"><%= link_to "Sign up", new_user_path %> </div>
+          <% end %>
+        </div>
+        </div>
 
-    </div>
+
+      </div>
+
+       
+  </div>  <!-- thehead -->
+
+
+</div>
+
+ <!--  <div class="cardbox fullerton ">
+    This Element Needs Purpose
+  </div> -->
+</div>
 
     <!-- nav -->
 
