Renamed user settings to card search?

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
             <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %> </div>
             <div class = "menuitem"><%= link_to "Find Trades", users_path%> </div>
-            <div class = "menuitem"><%= link_to "User Settings", root_path %> </br> </div>
+            <div class = "menuitem"><%= link_to "Card Search", root_path %> </br> </div>
            
              
           </div>
