Removed link styling

--- a/app/assets/stylesheets/themepack.scss
+++ b/app/assets/stylesheets/themepack.scss
@@ -68,11 +68,11 @@ $searchtextalign: right;
 
 	a:link {
 		// background-color: rgba( $link-background, .7 );
-	 	color: $linkcolor;
+	 	// color: $linkcolor;
 	}
 
 	a:visited {
-	    color: $linkcolor;
+	    // color: $linkcolor;
 	}
 
 
