Renamed some headers

--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,5 +1,5 @@
 <div class="section-inner search-theme mobile-collapse">
-	<h1>Trades Overview</h1>
+	<h1>My Trades</h1>
 	
 		<ul class="accordion-tabs">
 			<li class="tab-header-and-content">
