--- a/app/views/users/_inventory_list.html.erb
+++ b/app/views/users/_inventory_list.html.erb
@@ -4,13 +4,22 @@
 			<tbody>
 				<tr>
 					<th>
-						<h4>Inv</h4>
+					<div class = "wittlepicture">
+						<%= image_tag "box52.svg" %>
+					</div>
+					</th>
+
+					<th>
+					<div class = "wittlepicture">
+						<%= image_tag "coins24.svg" %>
+					</div>
+						
 					</th>
 					<th>
-						<h4>Trade</h4>
-					</th>
-					<th>
-						<h4>Want</h4>
+					<div class = "wittlepicture">
+						<%= image_tag "star174.svg" %>
+					</div>
+						
 					</th>
 					<th>
 						<h4>Name</h4>
