--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -30,36 +30,67 @@
         <div class="modal-window">
           <div class="modal-inner">
             <label class="modal-close" for="<%= card.id %>"></label>
-            <div id="modal-display">
+            
+            <div class="modal-display">
 
               <h1><%= card.name %></h1>
-              <img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-              <div id ="card-info">
-                <table >
-                  <tr>
-                    <td>
-                      <%= card.card_set.name %>
-                    </td>
-                    
-                  </tr>
-                  <tr>
-                    <td>
-                      <%= card.card_types.first.name %>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <%= card.mana_cost %>
-                      <%= card.flavor %>
-                    </td>
-                  </tr>
 
-                </table>
-              </div>
-              <!-- <div> 
-                <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put %>
-                <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put %>
-              </div> -->
+                
+                  <div class="modal-card-image">
+                    <img src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+                  </div>
+                
+
+                <div class="modal-card-info">     
+         <!--          <table>
+                    <tr>
+                      <td>
+                      <br>
+                        Set: <%= card.card_set.name %>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Card Type: <%= card.card_types.first.name %>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Mana Cost: <%= card.mana_cost %>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <%= card.text %>
+                      </td>
+                    </tr>
+                  </table> -->
+                  <h4>Set</h4>
+                  <p><%= card.card_set.name %></p>
+                  <br>
+                  <h4>Card Type</h4>
+                  <p><%= card.card_types.first.name %></p>
+                  <br>
+                  <h4>Mana Cost</h4>
+                  <p><%= card.mana_cost %></p>          
+                  <br>
+                  <h4>Card Text</h4>
+                  <p><%= card.text %></p>                  
+                </div>
+
+                <div class="modal-card-options">
+
+                  <div class="modal-find-nearby-button">
+                    <%= link_to "Find Card Nearby", return_first_search_result_path({card_fields: {name: card.name, card_set: card.card_set.name}, distance: 1}), :method => :post %>
+                  </div>
+
+                  <div class="modal-add-to-list-button">
+                    <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put %>
+                    <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> 
+                    <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put %>
+                  </div>
+                  
+                </div>
 
             </div>
           </div>
