--- a/app/assets/stylesheets/modules/thehead.scss
+++ b/app/assets/stylesheets/modules/thehead.scss
@@ -9,6 +9,29 @@ $itempadding: 1%;
 	background-color: #F7F7F7;
 	box-shadow: 1px 1px  $linkcolor;
 
+	a:link {
+		background-color: rgba( $link-background, .7 );
+	 	color: $linkcolor;
+	}
+
+	a:visited {
+	    color: $linkcolor;
+	}
+
+
+	
+	a:hover {
+	    color: black;
+	}
+
+	h1{
+		// font-size: 2em;
+	}
+
+	a{
+		// font-size: 2em;
+	} 
+
 	.maintitle{
 		@include span-columns(3);
 		.text{
