--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -11,9 +11,9 @@
       <th>Cost</th>
       <th>Set</th>
       <th>TCGMid</th>
-      <th><%= image_tag "empty28.svg" %></th>
-      <th>T</th>
-      <th>W</th>
+      <th class = "vectorbox"><div class = "wittlepicture"><%= image_tag "box52.svg" %> </div></th>
+      <th class = "vectorbox"><div class = "wittlepicture"><%= image_tag "coins24.svg" %> </div></th>
+      <th class = "vectorbox"><div class = "wittlepicture"><%= image_tag "star174.svg" %> </div></th>
     </tr>
   </thead>
   <tbody>
