--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -112,18 +112,24 @@
       </td>
       <td class="inventory">
         <%= link_to add_to_inventory_path(card.id), :remote => true, class: "add-inventory", data: {card_name: card.name}, :method => :put do %>
-          +
-        <% end %>
+          <div class= "wittlepicture">
+            <%= image_tag "plus24.svg" %>            
+          </div>
+                  <% end %>
       </td>
       <td class="tradeable">
         <%= link_to add_to_tradeable_path(card.id), :remote => true, class: "add-tradeable", data: {card_name: card.name}, :method => :put do %> 
-          +
-        <% end %>
+          <div class= "wittlepicture">
+            <%= image_tag "plus24.svg" %>
+          </div>
+                  <% end %>
       </td>
       <td class="wanted">
         <%= link_to add_to_wanted_path(card.id), :remote => true, class: "add-wanted", data: {card_name: card.name}, :method => :put do %>
-         +
-        <%end%> 
+         <div class= "wittlepicture">
+            <%= image_tag "plus24.svg" %>
+         </div>
+                 <%end%> 
       </td>
 
     </tr>
